STYLE: fix alignment

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,11 +15,12 @@
     text-align: center;
     padding-top: 19px;
     font-size: 40px;
+    margin-left: 150px;
 }
 
 .fa-plus {
     position: absolute;
-    left: 26px;
+    left: 176px;
     top: 3px;
     font-size: 100px;
     opacity: .5;
